--- a/index.html
+++ b/index.html
@@ -22,17 +22,21 @@
         </div>
     </div>
   </div>
-  <div id="buttons"></div>
-  <hr>
-  <div class="container">
-    <div class="row col-md-9">
-      <div id="gifs-appear-here"></div>
+  <div class="container">  
+    <div class="form-group col-md-12">
+      <div id="buttons"></div>
     </div>  
-    <div class="form-group col-md-3">
+  </div>   
+  <hr>
+  <div class="container">  
+    <div class="form-group col-md-4">
       <label for="addHero" id="hLabel">Add a New Hero</label>
       <input type="text" class="form-control" id="addHero">
       <button type="submit" class="btn btn-outline-danger" id="newHeroes">Submit</button>
     </div>
+    <div class="row col-md-9">
+      <div id="gifs-appear-here"></div>
+    </div>  
   </div>
 
   <!-- jQuery JS -->
