--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
       <div id="gifs-appear-here"></div>
     </div>  
   </div>
+  <div class="container">
+    <div class="form-group col-md-12">
+        <div id="moreButton"></div>
+    </div> 
+<!--   <button type="submit" class="btn btn-outline-danger" id="moreHeroes">Want More?</button>
+--> 
+</div>
 
   <!-- jQuery JS -->
   <script src="https://code.jquery.com/jquery.js"></script>
